--- a/book.bib
+++ b/book.bib
@@ -1,7 +1,7 @@
 @Book{deWaal,
   title = {Handbook of Statistical Data Editing and Imputation},
   author = {Ton de Waal, Jeroen Pannekoek, Sander Scholtus},
-  publisher = {John Wiley & Sons Inc},
+  publisher = {John Wiley Sons Inc},
   address = {Hoboken, New Jersey},
   year = {2011},
   edition = {1st},
